width-min has been added in body's css rules to ensure that elements don't overlap, this css declaration is related with imageslt's css declaration. Calc center the image in the remaining space

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,17 @@
 body{
-    background-color: #0f0e17;
+    background-color: black;
     font-family: 'Merriweather', serif;
+    min-width: 1475px;
 }
-
 
 header{
     width: 45%;
     border-bottom: #a7a9be solid 1px;
     position: relative;
-    top: 14em;
+    top: 15rem;
     color: #fffffe;
     font-size: 1em;
+    min-width: 823.5px;
 }
 
 h1.animate__animated.animate__fadeInTopLeft {
@@ -20,8 +21,8 @@ h1.animate__animated.animate__fadeInTopLeft {
 
 a.animate__animated.animate__fadeIn{
     position: relative;
-    top: 18em;
-    left: 20em;
+    top: 18rem;
+    left: 20rem;
 
     font-weight: 900;
     background-color: #ff8906;
@@ -41,7 +42,10 @@ a.animate__animated.animate__fadeIn:active{
     box-shadow: 0px 15px 20px rgba(242, 95, 76, 0.4);
 }
 
-.videoP video{
+
+.imageslt {
     position: relative;
-    left: 70em;
+    left: calc(75% - 263px);
+    top: -7rem;
+    width: 526px;
 }
